--- a/radio button challenge 2.csproj
+++ b/radio button challenge 2.csproj
@@ -94,5 +94,17 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Pencil.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="pen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="phone.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="pad.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
